update scheme_id by retailer_ids and manufacturer_id
