# routes/Retailer.js
@@ -6,5 +6,6 @@ const retailer = require('../controllers/retailerController');
 router.post('/get-retailer-list/', retailer.getRetailerList);
 //@Arfin
 router.get('/retailers/:distributor_id', retailer.getRetailerByDistributor);
+router.put('/schema', retailer.updateSchemaByRetailers);
 
 module.exports = router;
